--- a/02-Membership.Rmd
+++ b/02-Membership.Rmd
@@ -14,7 +14,7 @@ All members are expected to participate approximately 8 hours per week, although
 
 ### Opportunity for late admission [^1] {#late}
 
-This section outlines the procedure to follow if a student missed the recruitment window, but has indicated an interest to "join late"
+Under special circumstances (as discussed by all members of Eagle I.O) students may be allowed to join [outside the period of recruitment](#late). The decision for membership must be discussed by all current members of Eagle I.O and be unanimous.
 
 Currently, Eagle I.O is limited to a maximum 10 student member cap. 
 
@@ -23,16 +23,8 @@ If the current occupancy of Eagle I.O is less than 10, then there is a list of m
 * 1 semester of enrollment within the MSU I/O Psychology program
 * 3.8 GPA
 * At least 1 semester remaining in the program
-* An expressed interest
-
-Under special circumstances (as discussed by all members of Eagle I.O) students may be allowed to join [outside the period of recruitment](#late). The decision for membership must be discussed by all current members of Eagle I.O and be unanimous.
-
-Criteria  
-
-+ Current GPA 3.5 or higher
-+ Organizational Citizenship Behavior (OCBs) - such as presence at events or hangouts
-+ Involvement in the membership program
-+ Completed at least 1 semester of classes in the program (Masters' or Ph.D.)
+* Involvement in the mentorship program
+* Organizational Citizenship Behavior (OCBs) - such as presence at events or hangouts
 
 ## Eagle I.O expectations (all members)
 
